# info_disco_of_awesomeness

./: .env  .gitignore  README.md  docker-compose.yml  logger.rs  shutdown_gracefully.sh
crawler/: .env  Cargo.toml  Dockerfile  tested_on.txt
crawler/src/: lib.rs  main.rs  models.rs  robots_scraper.rs  rss_scraper.rs  webclient.rs
database_connector/: Cargo.toml  diesel.toml
database_connector/migrations/2022-02-13-144906_create_targets_table/: down.sql  up.sql
database_connector/migrations/2022-02-21-073302_alter_targets_table/: down.sql  up.sql
database_connector/migrations/2022-02-21-073718_set_targets_constraints/: down.sql  up.sql
database_connector/migrations/2022-02-21-075257_add_fulltext_opt_to_targets/: down.sql  up.sql
database_connector/migrations/2022-02-26-212638_create_articles_table/: down.sql  up.sql
database_connector/src/: functions.rs  lib.rs  models.rs  schema.rs
logger/: Cargo.toml
logger/src/: lib.rs  logger.rs
