[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# This config should go somewhere else - https://doc.rust-lang.org/cargo/reference/config.html
# [config]
# build = "/app/production/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
log = "0.4"
ctrlc = "3.2.1"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
lazy_static = "1.4.0"
#uuid = "0.8.2"

#[features]
#serde = ["uuid", "v4"]

