[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

#[lib]
# crate-type = ["rlib", "dylib", "cdylib", "staticlib"]
#name = "crawler"
#path = "src/lib.rs"

# This config should go somewhere else - https://doc.rust-lang.org/cargo/reference/config.html
# [config]
# build = "/app/production/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal
logger = { path = "../logger" }
database_connector = { path = "../database_connector" }

# External
log = "0.4"
chrono = "0.4.19"
ctrlc = "3.2.1"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
lazy_static = "1.4.0"
robotstxt = "0.3.0"
hyper = { version = "0.14.17", features = ["full"] }
hyper-tls = { version = "0.5.0" }
tokio = { version = "1.17.0", features = ["full"] }
feed-rs = "1.0"
#uuid = "0.8.2"

#[features]
#serde = ["uuid", "v4"]

