[package]
name = "logger"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib", "cdylib", "staticlib"]
name = "logger"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
chrono = "0.4.19"
